--- a/index.ipynb
+++ b/index.ipynb
@@ -707,31 +707,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "9\n"
+     ]
+    }
+   ],
    "source": [
-    "left_hand_eq = None\n",
+    "left_hand_eq = len(A | B | C)\n",
     "print(left_hand_eq)  # 9 elements in the set"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "9\n"
+     ]
+    }
+   ],
    "source": [
-    "right_hand_eq = None\n",
+    "right_hand_eq = len(A) + len(B) + len(C) - len(A&B) - len(A&C) - len(B&C) + len(A&B&C)\n",
     "print(right_hand_eq) # 9 elements in the set"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "None # Use a comparison operator to compare `left_hand_eq` and `right_hand_eq`. Needs to say \"True\"."
+    "left_hand_eq == right_hand_eq  # Use a comparison operator to compare `left_hand_eq` and `right_hand_eq`. Needs to say \"True\"."
    ]
   },
   {
@@ -745,7 +772,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -777,11 +804,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Goldfish', 'Rabbit'}"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "None\n",
+    "Eve.remove(\"Turtle\")\n",
     "Eve # should be {'Rabbit', 'Goldfish'}"
    ]
   },
@@ -794,11 +832,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Cat',\n",
+       " 'Chicken',\n",
+       " 'Chinchilla',\n",
+       " 'Dog',\n",
+       " 'Donkey',\n",
+       " 'Goldfish',\n",
+       " 'Horse',\n",
+       " 'Parrot',\n",
+       " 'Rabbit'}"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "None\n",
+    "Nina.update(Mary)\n",
     "Nina # {'Chicken', 'Horse', 'Chinchilla', 'Parrot', 'Rabbit', 'Donkey', 'Dog', 'Cat', 'Goldfish'}"
    ]
   },
@@ -811,11 +868,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "set()"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "None\n",
+    "Mary.clear()\n",
     "Mary  # set()"
    ]
   },
@@ -828,11 +896,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "9"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "n_species_Nina = None\n",
+    "n_species_Nina = len(Nina)\n",
     "n_species_Nina # 9"
    ]
   },
@@ -845,12 +924,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "7"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "None\n",
-    "Nina # 7"
+    "Nina.difference_update(Eve)\n",
+    "len(Nina) # 7"
    ]
   },
   {
@@ -885,6 +975,107 @@
     " - I. $D'$ \n",
     " - II. $C \\cap D$, \n",
     " - III. $C \\cup D$. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "A = {\"LLL\", \"SSS\", \"RRR\"}\n",
+    "B = {'LRS', 'LSR', 'RLS', 'RSL', 'SLR', 'SRL'}\n",
+    "C = {'LRR', 'RLR', 'RRL', 'SRR', 'RSR', 'RRS'}\n",
+    "D = {\n",
+    "        #  turn right\n",
+    "        'LRR', 'RLR', 'RRL', 'SRR', 'RSR', 'RRS', \\\n",
+    "        #  continue straight\n",
+    "        'LSS', 'SLS', 'SSL', 'RSS', 'SRS', 'SSR', \\\n",
+    "        #  turn left\n",
+    "        'SLL', 'LSL', 'LLS', 'RLL', 'LRL', 'LLR'\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'LLL', 'LRS', 'LSR', 'RLS', 'RRR', 'RSL', 'SLR', 'SRL', 'SSS'}"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Dprime = A | B\n",
+    "Dprime"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'LRR', 'RLR', 'RRL', 'RRS', 'RSR', 'SRR'}"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "unity_C_D = C & D\n",
+    "unity_C_D"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'LLR',\n",
+       " 'LLS',\n",
+       " 'LRL',\n",
+       " 'LRR',\n",
+       " 'LSL',\n",
+       " 'LSS',\n",
+       " 'RLL',\n",
+       " 'RLR',\n",
+       " 'RRL',\n",
+       " 'RRS',\n",
+       " 'RSR',\n",
+       " 'RSS',\n",
+       " 'SLL',\n",
+       " 'SLS',\n",
+       " 'SRR',\n",
+       " 'SRS',\n",
+       " 'SSL',\n",
+       " 'SSR'}"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "unionC_D = C | D\n",
+    "unionC_D\n"
    ]
   },
   {
