--- a/index.ipynb
+++ b/index.ipynb
@@ -1091,7 +1091,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1101,7 +1101,9 @@
     "europe = pd.read_excel('Europe_and_EU.xlsx', sheet_name = 'Europe') \n",
     "eu = pd.read_excel('Europe_and_EU.xlsx', sheet_name = 'EU')\n",
     "\n",
-    "# Your code here to remove any whitespace from names"
+    "# Your code here to remove any whitespace from names\n",
+    "europe['Country'] = europe['Country'].str.strip()\n",
+    "eu['Country'] = eu['Country'].str.strip()"
    ]
   },
   {
@@ -1113,18 +1115,221 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 65,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Rank</th>\n",
+       "      <th>Country</th>\n",
+       "      <th>Population</th>\n",
+       "      <th>% of population</th>\n",
+       "      <th>Average relative annual growth (%)</th>\n",
+       "      <th>Average absolute annual growth</th>\n",
+       "      <th>Estimated doubling time (Years)</th>\n",
+       "      <th>Official figure (where available)</th>\n",
+       "      <th>Date of last figure</th>\n",
+       "      <th>Regional grouping</th>\n",
+       "      <th>Source</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>Russia</td>\n",
+       "      <td>143964709</td>\n",
+       "      <td>17.15</td>\n",
+       "      <td>0.19</td>\n",
+       "      <td>294285</td>\n",
+       "      <td>368</td>\n",
+       "      <td>146839993</td>\n",
+       "      <td>2017-01-01 00:00:00</td>\n",
+       "      <td>EAEU</td>\n",
+       "      <td>[1]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2.0</td>\n",
+       "      <td>Germany</td>\n",
+       "      <td>82521653</td>\n",
+       "      <td>9.80</td>\n",
+       "      <td>1.20</td>\n",
+       "      <td>600000</td>\n",
+       "      <td>90</td>\n",
+       "      <td>82800000</td>\n",
+       "      <td>2016-12-31 00:00:00</td>\n",
+       "      <td>EU</td>\n",
+       "      <td>Official estimate</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3.0</td>\n",
+       "      <td>Turkey</td>\n",
+       "      <td>80810000</td>\n",
+       "      <td>9.60</td>\n",
+       "      <td>1.34</td>\n",
+       "      <td>1035000</td>\n",
+       "      <td>52</td>\n",
+       "      <td>77695904</td>\n",
+       "      <td>2016-12-31 00:00:00</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>[2]</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Rank  Country  Population  % of population  \\\n",
+       "0   1.0   Russia   143964709            17.15   \n",
+       "1   2.0  Germany    82521653             9.80   \n",
+       "2   3.0   Turkey    80810000             9.60   \n",
+       "\n",
+       "   Average relative annual growth (%)  Average absolute annual growth  \\\n",
+       "0                                0.19                          294285   \n",
+       "1                                1.20                          600000   \n",
+       "2                                1.34                         1035000   \n",
+       "\n",
+       "  Estimated doubling time (Years)  Official figure (where available)  \\\n",
+       "0                             368                          146839993   \n",
+       "1                              90                           82800000   \n",
+       "2                              52                           77695904   \n",
+       "\n",
+       "   Date of last figure Regional grouping             Source  \n",
+       "0  2017-01-01 00:00:00             EAEU                 [1]  \n",
+       "1  2016-12-31 00:00:00               EU   Official estimate  \n",
+       "2  2016-12-31 00:00:00               NaN                [2]  "
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "europe.head(3)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 66,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Rank</th>\n",
+       "      <th>Country</th>\n",
+       "      <th>2017 population</th>\n",
+       "      <th>% of pop.</th>\n",
+       "      <th>Average relative annual growth</th>\n",
+       "      <th>Average absolute annual growth</th>\n",
+       "      <th>Official figure</th>\n",
+       "      <th>Date of last figure</th>\n",
+       "      <th>Source</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Germany</td>\n",
+       "      <td>82800000</td>\n",
+       "      <td>16.18</td>\n",
+       "      <td>0.76</td>\n",
+       "      <td>628876</td>\n",
+       "      <td>82576900</td>\n",
+       "      <td>2017-03-31</td>\n",
+       "      <td>Official estimate</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>France</td>\n",
+       "      <td>67210459</td>\n",
+       "      <td>13.10</td>\n",
+       "      <td>0.40</td>\n",
+       "      <td>265557</td>\n",
+       "      <td>67174000</td>\n",
+       "      <td>2018-01-01</td>\n",
+       "      <td>Monthly official estimate</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>United Kingdom</td>\n",
+       "      <td>65808573</td>\n",
+       "      <td>12.86</td>\n",
+       "      <td>0.65</td>\n",
+       "      <td>428793</td>\n",
+       "      <td>65648100</td>\n",
+       "      <td>2017-06-30</td>\n",
+       "      <td>Official estimate</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Rank         Country  2017 population  % of pop.  \\\n",
+       "0     1         Germany         82800000      16.18   \n",
+       "1     2          France         67210459      13.10   \n",
+       "2     3  United Kingdom         65808573      12.86   \n",
+       "\n",
+       "   Average relative annual growth  Average absolute annual growth  \\\n",
+       "0                            0.76                          628876   \n",
+       "1                            0.40                          265557   \n",
+       "2                            0.65                          428793   \n",
+       "\n",
+       "   Official figure Date of last figure                     Source  \n",
+       "0         82576900          2017-03-31          Official estimate  \n",
+       "1         67174000          2018-01-01  Monthly official estimate  \n",
+       "2         65648100          2017-06-30          Official estimate  "
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "eu.head(3)"
    ]
@@ -1138,11 +1343,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 67,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "Can only compare identically-labeled Series objects",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[67], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# Check to confirm that the EU countries are a subset of countries in Europe\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m \u001b[38;5;28mset\u001b[39m(eu[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mCountry\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m<\u001b[39m europe[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mCountry\u001b[39m\u001b[38;5;124m'\u001b[39m])\n",
+      "File \u001b[1;32m~\\anaconda3\\Lib\\site-packages\\pandas\\core\\ops\\common.py:76\u001b[0m, in \u001b[0;36m_unpack_zerodim_and_defer.<locals>.new_method\u001b[1;34m(self, other)\u001b[0m\n\u001b[0;32m     72\u001b[0m             \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mNotImplemented\u001b[39m\n\u001b[0;32m     74\u001b[0m other \u001b[38;5;241m=\u001b[39m item_from_zerodim(other)\n\u001b[1;32m---> 76\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m method(\u001b[38;5;28mself\u001b[39m, other)\n",
+      "File \u001b[1;32m~\\anaconda3\\Lib\\site-packages\\pandas\\core\\arraylike.py:48\u001b[0m, in \u001b[0;36mOpsMixin.__lt__\u001b[1;34m(self, other)\u001b[0m\n\u001b[0;32m     46\u001b[0m \u001b[38;5;129m@unpack_zerodim_and_defer\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m__lt__\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m     47\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21m__lt__\u001b[39m(\u001b[38;5;28mself\u001b[39m, other):\n\u001b[1;32m---> 48\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_cmp_method(other, operator\u001b[38;5;241m.\u001b[39mlt)\n",
+      "File \u001b[1;32m~\\anaconda3\\Lib\\site-packages\\pandas\\core\\series.py:5798\u001b[0m, in \u001b[0;36mSeries._cmp_method\u001b[1;34m(self, other, op)\u001b[0m\n\u001b[0;32m   5795\u001b[0m res_name \u001b[38;5;241m=\u001b[39m ops\u001b[38;5;241m.\u001b[39mget_op_result_name(\u001b[38;5;28mself\u001b[39m, other)\n\u001b[0;32m   5797\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(other, Series) \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_indexed_same(other):\n\u001b[1;32m-> 5798\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mCan only compare identically-labeled Series objects\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m   5800\u001b[0m lvalues \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_values\n\u001b[0;32m   5801\u001b[0m rvalues \u001b[38;5;241m=\u001b[39m extract_array(other, extract_numpy\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m, extract_range\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m)\n",
+      "\u001b[1;31mValueError\u001b[0m: Can only compare identically-labeled Series objects"
+     ]
+    }
+   ],
    "source": [
-    "# Check to confirm that the EU countries are a subset of countries in Europe"
+    "# Check to confirm that the EU countries are a subset of countries in Europe\n",
+    "set(eu.Country < europe['Country'])\n"
    ]
   },
   {
